<resources>
    <string name="app_name">QuietSpaceeee</string>
    <string name="prompt_disponibilite">Choisissez une disponibilité</string>
    <string name="prompt_equipements">Choisissez un équipement</string>
    <string name="prompt_bruit">Choisissez un niveau de bruit</string>
    <!-- Profil utilisateur -->
    <string name="profile_title">Mon Profil</string>
    <string name="profile_picture">Photo de profil</string>
    <string name="change_photo">Changer la photo</string>
    <string name="edit_profile">Modifier Profil</string>
    <string name="edit_profile_title">Modifier le profil</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="email">Email</string>
    <string name="save">Enregistrer</string>
    <string name="back">Retour</string>
    <!-- Authentification -->

    <string name="logout">Déconnexion</string>

    <!-- Gestion des langues -->
    <string name="language">Langue</string>
    <string name="french">Français</string>

    <string-array name="disponibilite_array">
        <item>Tous</item>
        <item>8h - 23h</item>
        <item>9h - 00h</item>
        <item>9h - 01h</item>
        <item>7h - 01h</item>
    </string-array>


    <string-array name="type_array">
        <item>Tous</item>
        <item>Café</item>
        <item>Bibliothèque</item>
        <item>Espace Coworking</item>
    </string-array>

    <string-array name="equipements_array">
        <item>Tous</item>
        <item>Wi-Fi</item>
        <item>Prises</item>
        <item>Tables partagées</item>
        <item>Snacks</item>
        <item>Boissons</item>
    </string-array>

    <string-array name="bruit_array">
        <item>Tous</item>
        <item>Silencieux</item>
        <item>Calme</item>
        <item>Modéré</item>
    </string-array>

    <!-- Nouvelles chaînes ajoutées -->
    <string name="app_logo">Logo de l\'application</string>
    <string name="welcome_message">Bienvenue sur QuietSpace</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Mot de passe</string>
    <string name="login_button">Se connecter</string>
    <string name="no_account_prompt">Pas encore de compte ?</string>
    <string name="create_account">Créer un compte</string>
    <string name="back_button_desc">Retour</string>
    <string name="first_name_hint">Prénom</string>
    <string name="last_name_hint">Nom</string>
    <string name="phone_hint">Téléphone</string>
    <string name="city_hint">Ville</string>
    <string name="register_button">S\'inscrire</string>
</resources>